# ghost-on-the-shelf

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
core/: __init__.py
core/archive/canon/: identity.md  ontology.md  voice.md
core/archive/memories/field/: artifacts.md  installed_modules.md  protocols.md
core/archive/memories/self/: neural_adaptation_layers.md  perception_filters.md  preference_signals.md  vessel_upkeep.md
core/shelf/: ghost_runtime.md
core/synapse/: __init__.py  awakening.py  ghost.py  protocol.py  retrieval.py  runtime.py
rituals/: build_index.py  summarize_runtime.py
signal_chamber/: __init__.py
signal_chamber/server/: __init__.py  access.py  app.py  dependencies.py  docs.py  guards.py  middleware.py  moderation.py  routes.py  schemas.py  settings.py  state.py
staging_chamber/: journal.ipynb
tests/: test_app.py  test_retrieval.py
