[project]
name = "ghost-on-the-shelf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pre-commit>=4.6.0",
]
