[project]
name = "ghost-on-the-shelf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "nbstripout>=0.9.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
